# hr-ai-agents

./: .gitignore  Dockerfile  README.md  agents_services.py  main.py  models.py  prompts.py  pyproject.toml  render.yaml  requirements.txt  test_server.py  validator.py
frontend/: package-lock.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CandidateDetails.tsx  CandidatesTable.tsx  CheckingData.tsx  Dashboard.tsx  firstMassage.tsx
frontend/src/pages/: CandidatePage.tsx  HRDashboard.tsx
frontend/src/services/: analysisService.ts
static/: index.html
static/assets/: index-bsNHss_S.css  index-jms_l2LF.js
